--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>local news</title>
+  </head>
+  <body>
+    <h1>Local News</h1>
+    <ul>
+      <li>
+        <p>
+          Thanksgiving travel snarled by Coast to Coast storm bringing rain and
+          snow.
+        </p>
+        <p>Amazon workers worldwide set to protest on Black Friday weekend.</p>
+        <p>
+          Drones spotted over military bases in the U.K. that are used by the
+          U.S.
+        </p>
+      </li>
+    </ul>
+    <a href="sports.html">Sports</a>
+    <a href="economy.html">Economy</a>
+  </body>
 </html>
