--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <li>
         <p>
           Thanksgiving travel snarled by Coast to Coast storm bringing rain and
-          snow.
-        </p>
-        <p>Amazon workers worldwide set to protest on Black Friday weekend.</p>
+          snow. </li>
+        </p> 
+        <p> <li> Amazon workers worldwide set to protest on Black Friday weekend.</li> </p>
         <p>
-          Drones spotted over military bases in the U.K. that are used by the
-          U.S.
+         <li> Drones spotted over military bases in the U.K. that are used by the
+          U.S. </li>
         </p>
       </li>
     </ul>
