--- a/sports.html
+++ b/sports.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sports</title>
 </head>
 <body>
+    <h1>Sports Topics</h1>
+    <p> 2024 Summer Olympics: Simone Biles is all the way back.The 27-year-old American gymnast was already the most decorated athlete to ever take part in her sport. Now she can comfortably call herself the greatest of all time. She now has the GOAT necklace to prove it.</p>
+    <img src="https://media.cnn.com/api/v1/images/stellar/prod/gettyimages-2164848497.jpg?q=w_1110,c_fill/f_webp" alt="picture of Simone Biles">
+   
+    <p> Novak Djokovic's for the Golden Slam. Serbia's Novak Djokovic plays against Lorezo Musetti
+        of Italy on Friday.
+    </p>
+    <img src="https://media.cnn.com/api/v1/images/stellar/prod/7ba7bf35-db98-4a7a-8e0d-09511ba9b915.jpg?q=w_1110,c_fill/f_webp" alt="picture of Novak Djokovic">
+    
+    <p>The River Seine holds the triathlon after big worries over water quality. Athletes dive into the Seine river to start the swimming stage of the men's individual triathlon at the Paris 2024 Olympic Games in central Paris on July 31, 2024</p>
+    <img src="https://media.cnn.com/api/v1/images/stellar/prod/gettyimages-2163984414.jpg?q=w_1110,c_fill/f_webp" alt="image of swimmers">
     
 </body>
 </html>
