--- a/sports.html
+++ b/sports.html
@@ -17,6 +17,8 @@
     
     <p>The River Seine holds the triathlon after big worries over water quality. Athletes dive into the Seine river to start the swimming stage of the men's individual triathlon at the Paris 2024 Olympic Games in central Paris on July 31, 2024</p>
     <img src="https://media.cnn.com/api/v1/images/stellar/prod/gettyimages-2163984414.jpg?q=w_1110,c_fill/f_webp" alt="image of swimmers">
-    
+
+    <a href="index.html">Home</a>
+    <a href="economy.html">Economy</a>
 </body>
 </html>
