--- a/sports.html
+++ b/sports.html
@@ -37,8 +37,10 @@
       src="https://media.cnn.com/api/v1/images/stellar/prod/gettyimages-2163984414.jpg?q=w_1110,c_fill/f_webp"
       alt="image of swimmers"
     />
-
-    <a href="index.html">Home</a>
-    <a href="economy.html">Economy</a>
+    <link rel="stylesheet" href="style.css" />
+    <div>
+      <a href="index.html">Home</a>
+      <a href="economy.html">Economy</a>
+    </div>
   </body>
 </html>
