--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>local news</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>news website</title>
   </head>
   <body>
     <h1>Local News</h1>
     <ul>
-      <li>
-        <p>
-          Thanksgiving travel snarled by Coast to Coast storm bringing rain and
-          snow. </li>
-        </p> 
-        <p> <li> Amazon workers worldwide set to protest on Black Friday weekend.</li> </p>
-        <p>
-         <li> Drones spotted over military bases in the U.K. that are used by the
-          U.S. </li>
-        </p>
-      </li>
+      <p>
+        <li>
+          Thanksgiving travel snarled by Coast-to-coast storm bringing rain and
+          snow.
+        </li>
+      </p>
+      <p>
+        <li>
+          Amazon workers worldwide set to protest on Black Friday weekend.
+        </li>
+      </p>
+      <p>
+        <li>
+          Drones spotted over military bases in the U.K. that are used by the
+          U.S.
+        </li>
+      </p>
     </ul>
     <a href="sports.html">Sports</a>
     <a href="economy.html">Economy</a>
