--- a/sports.html
+++ b/sports.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sports</title>
+    <title>Sports website</title>
   </head>
   <body>
     <h1>Sports Topics</h1>
+    <h2><bold>Olympics</bold></h2>
     <p>
-      2024 Summer Olympics: Simone Biles is all the way back.The 27-year-old
-      American gymnast was already the most decorated athlete to ever take part
-      in her sport. Now she can comfortably call herself the greatest of all
-      time. She now has the GOAT necklace to prove it.
+      Simone Biles is all the way back.The 27-year-old American gymnast was
+      already the most decorated athlete to ever take part in her sport. Now she
+      can comfortably call herself the greatest of all time. She now has the
+      GOAT necklace to prove it.
     </p>
     <img
       src="https://media.cnn.com/api/v1/images/stellar/prod/gettyimages-2164848497.jpg?q=w_1110,c_fill/f_webp"
