--- a/economy.html
+++ b/economy.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Economy website</title>
+  </head>
+  <body>
+    <link rel="stylesheet" href="style.css">
+     <table>
+     <tr>
+     <th>Apple
+     </th><td>AAPL</td>
+     <td>565.25</td>
+     </table>
+    <table>
+    <tr>
+    <th>Exxon
+    </th> <td>XOM
+    </td><td>84.57</td>
+    </tr>
+    <table>
+      <tr>
+      <th>Microsoft
+      </th><td>MFST</td>
+      <td>30.98</td>
+      </tr>
+    </table>
+    <table>
+    <tr>
+    <th>Johnson & Johnson
+    </th> <td>J&J</td>
+    <td>64.74</td>
+    </tr>
+    </table>
+    <table>
+    <tr>
+    <th>General Electric</th>
+    <td>GE</td><td>19.34</td></tr>
+    </table>
+    <a href="index.html">Home Page</a>
+    <a href="sports.html">Sports</a>
+    </body>
 </html>
