--- a/economy.html
+++ b/economy.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Economy website</title>
   </head>
+  
   <body>
     <link rel="stylesheet" href="style.css">
+     <h1> Economy Stocks Table</h1>
      <table>
      <tr>
      <th>Apple
