--- a/index.html
+++ b/index.html
@@ -6,28 +6,43 @@
     <link rel="stylesheet" href="style.css" />
     <title>news website</title>
   </head>
+
   <body>
     <h1>Local News</h1>
     <ul>
       <p>
         <li>
           Thanksgiving travel snarled by Coast-to-coast storm bringing rain and
-          snow.
+          snow. Last minute holiday travel could be impacted by rain, possible
+          snow moving in Wednesday night. Clouds will be with us much of the day
+          ahead of our next system. Rain and snow showers will overspread the
+          area Wednesday night with primarily rain for the Pittsburgh area.
+          However, snow could drop a slushy inch or two of snow along and north
+          of the I-80 corridor by Thursday morning creating slippery conditions
+          in those areas for Thanksgiving morning.
         </li>
       </p>
       <p>
         <li>
-          Amazon workers worldwide set to protest on Black Friday weekend.
+          Amazon workers worldwide set to protest on Black Friday weekend.In a
+          concerning turn of events, Amazon will be experiencing a workers
+          strike on a global scale in the build-up to the holiday season. The
+          display of resistance will take place between
+          <em> Black Friday and Cyber Monday </em> across numerous nations.
         </li>
       </p>
       <p>
         <li>
           Drones spotted over military bases in the U.K. that are used by the
-          U.S.
+          U.S. The <i> U.S. Air Force </i> announced several unmanned aerial
+          systems were detected over three bases it has used in the United
+          Kingdom last week.
         </li>
       </p>
     </ul>
-    <a href="sports.html">Sports</a>
-    <a href="economy.html">Economy</a>
+
+    <div>
+      <a href="sports.html">Sports</a> <a href="economy.html">Economy</a>
+    </div>
   </body>
 </html>
