--- a/economy.html
+++ b/economy.html
@@ -5,42 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Economy website</title>
   </head>
-  
+
   <body>
-    <link rel="stylesheet" href="style.css">
-     <h1> Economy Stocks Table</h1>
-     <table>
-     <tr>
-     <th>Apple
-     </th><td>AAPL</td>
-     <td>565.25</td>
-     </table>
-    <table>
-    <tr>
-    <th>Exxon
-    </th> <td>XOM
-    </td><td>84.57</td>
-    </tr>
+    <link rel="stylesheet" href="style.css" />
+    <h1>Economy Stocks Table</h1>
     <table>
       <tr>
-      <th>Microsoft
-      </th><td>MFST</td>
-      <td>30.98</td>
+        <th>Company Name</th>
+        <th>Price</th>
+      </tr>
+      <tr>
+        <td>Apple</td>
+        <td>527,022,142,500</td>
+      </tr>
+      <tr>
+        <td>Exxon Mobil</td>
+        <td>397,687,211,340</td>
+      </tr>
+      <tr>
+        <td>Microsoft Corporation</td>
+        <td>259,946,085,580</td>
+      </tr>
+      <tr>
+        <td>Bank of America</td>
+        <td>248,692,932,940</td>
+      </tr>
+      <tr>
+        <td>Walmart Stores</td>
+        <td>199,619,622,500</td>
       </tr>
     </table>
-    <table>
-    <tr>
-    <th>Johnson & Johnson
-    </th> <td>J&J</td>
-    <td>64.74</td>
-    </tr>
-    </table>
-    <table>
-    <tr>
-    <th>General Electric</th>
-    <td>GE</td><td>19.34</td></tr>
-    </table>
+
     <a href="index.html">Home Page</a>
     <a href="sports.html">Sports</a>
-    </body>
+  </body>
 </html>
