--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>news website</title>
+    <title>News Website</title>
   </head>
 
   <body>
@@ -27,16 +27,15 @@
           Amazon workers worldwide set to protest on Black Friday weekend.In a
           concerning turn of events, Amazon will be experiencing a workers
           strike on a global scale in the build-up to the holiday season. The
-          display of resistance will take place between
-          <em> Black Friday and Cyber Monday </em> across numerous nations.
+          display of resistance will take place between Black Friday and Cyber
+          Monday across numerous nations.
         </li>
       </p>
       <p>
         <li>
           Drones spotted over military bases in the U.K. that are used by the
-          U.S. The <i> U.S. Air Force </i> announced several unmanned aerial
-          systems were detected over three bases it has used in the United
-          Kingdom last week.
+          U.S. The U.S. Air Force announced several unmanned aerial systems were
+          detected over three bases it has used in the United Kingdom last week.
         </li>
       </p>
     </ul>
