--- a/sports.html
+++ b/sports.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sports website</title>
   </head>
+
   <body>
     <h1>Sports Topics</h1>
-    <h2><bold>Olympics</bold></h2>
+    <h2>Olympics</h2>
     <p>
       Simone Biles is all the way back.The 27-year-old American gymnast was
       already the most decorated athlete to ever take part in her sport. Now she
       can comfortably call herself the greatest of all time. She now has the
       GOAT necklace to prove it.
     </p>
+
     <img
       src="https://media.cnn.com/api/v1/images/stellar/prod/gettyimages-2164848497.jpg?q=w_1110,c_fill/f_webp"
       alt="picture of Simone Biles"
